integrating new micro svcs
added the sport --> athlete and category --> choice UI
added view and controller for each
added menu entries for sport/category
added routeParams to get to filtered child lists

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,6 +30,12 @@
         <ion-item menu-close href="#/app/playlists">
           Playlists
         </ion-item>
+        <ion-item menu-close href="#/app/sports">
+          Teams/Sports
+        </ion-item>
+        <ion-item menu-close href="#/app/categories">
+          Fuel Cagtegories
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
